--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <h2>arrays, javascript, redux</h2>
+  <ul>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/length"> dot length </a></li>
+  </ul>
 </body>
 </html>
