dot push and pop

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h2>arrays, javascript, redux</h2>
   <ul>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/length"> dot length </a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push"> dot push </a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/pop"> dot pop </a></li>
   </ul>
 </body>
 </html>
