--- a/array-iterators.html
+++ b/array-iterators.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="iterators.js"></script>
+  <link rel="stylesheet" href="style.css">
   <title>array iterators</title>
 </head>
 <body>
