--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="app.js"></script>
+  <link rel="stylesheet" href="style.css">
+
   <title>js arrays redux</title>
 </head>
 <body>
