--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/unshift"> dot unshift </a></li>    
   </ul>
   <div>
-    <a href="/array-iterators.html">array iterators</a>
+    <a href="/iterators.html">array iterators</a>
   </div>
   
 </body>
