add iterator methods to html

--- a/iterators.html
+++ b/iterators.html
@@ -9,6 +9,23 @@
   <title>array iterators</title>
 </head>
 <body>
-  <h2>array iterators redux</h2>
+  <h2>array iterator methods redux</h2>
+  <h4>Array Iterator Methods are higher order function</h4>
+  <h4>They are higher order functions because they take functions as anargument</h4>
+  <li>Higher order functions delegate task</li>
+  <li>Higher order functions are composable</li>
+  <div>
+  <ul>
+    <li>shorter syntax</li>
+    <li>less prones to errors</li>
+    <li>declarative</li>
+  </ul>
+  </div>
+  <div>
+    <h4>Hot Iterator Methods</h4>
+      <ul>
+        <li></li>
+      </ul>
+  </div>
 </body>
 </html>
