--- a/iterators.html
+++ b/iterators.html
@@ -11,7 +11,7 @@
 <body>
   <h2>array iterator methods redux</h2>
   <h4>Array Iterator Methods are higher order function</h4>
-  <h4>They are higher order functions because they take functions as anargument</h4>
+  <h4>They are higher order functions because they take functions as arguments</h4>
   <li>Higher order functions delegate task</li>
   <li>Higher order functions are composable</li>
   <div>
