--- a/iterators.html
+++ b/iterators.html
@@ -24,7 +24,9 @@
   <div>
     <h4>Hot Iterator Methods</h4>
       <ul>
-        <li></li>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a>
+        </li>
       </ul>
   </div>
 </body>
