--- a/iterators.html
+++ b/iterators.html
@@ -25,6 +25,9 @@
     <h4>Hot Iterator Methods</h4>
       <ul>
         <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.map() </a>transforms the array and returns a new transformed array 
+        </li><br>
+        <li>
           <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a>
         </li>
       </ul>
