--- a/iterators.html
+++ b/iterators.html
@@ -25,10 +25,13 @@
     <h4>Hot Iterator Methods</h4>
       <ul>
         <li>
-          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.map() </a>transforms the array and returns a new transformed array 
+          <a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.map() </a>transforms the array and returns a new transformed array 
         </li><br>
         <li>
-          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a>
+          <a id="reduce" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.reduce() </a> "the multitool of all higer order functions" - Shahzad
+        </li><br>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a> creates a new array for us, returns the filtered items only. the callback fn returns a boolean value to the filter method
         </li>
       </ul>
   </div>
