reduce method html

--- a/iterators.html
+++ b/iterators.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <h2>array iterator methods redux</h2>
-  <h4>Array Iterator Methods are higher order function</h4>
+  <h4>Array Iterator Methods are higher order functions</h4>
   <h4>They are higher order functions because they take functions as arguments</h4>
   <li>Higher order functions delegate task</li>
   <li>Higher order functions are composable</li>
   <div>
   <ul>
     <li>shorter syntax</li>
-    <li>less prones to errors</li>
+    <li>less prone to errors</li>
     <li>declarative</li>
   </ul>
   </div>
@@ -28,7 +28,7 @@
           <a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.map() </a>transforms the array and returns a new transformed array 
         </li><br>
         <li>
-          <a id="reduce" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">.reduce() </a> "the multitool of all higer order functions" - Shahzad
+          <a id="reduce" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce">.reduce() </a> "the multitool of all higer order functions" - Shahzad <br><br>don't forget the zero - tim<br><br>a note on the mdn docs: they use the following syntax:<br><br>reduce(previousValue, currentValue) while Shahzad presents:<br><br>reduce(sum, order) as in "0 + idx[0] + idx[1] and so on"<br><br>another note to look into creating footnotes in html :)
         </li><br>
         <li>
           <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a> creates a new array for us, returns the filtered items only. the callback fn returns a boolean value to the filter method
