add more array iterators html and css

--- a/iterators.html
+++ b/iterators.html
@@ -49,6 +49,8 @@
     </div>
     <h4>console.log(`The total charge for dining is $ ${totalSpendingOnDining}`)</h4>
   </div>
-  
+  <div>
+    <a href="/more-iterators.html">more array iterators</a>
+  </div>
 </body>
 </html>
