--- a/more-iterators.html
+++ b/more-iterators.html
@@ -21,7 +21,14 @@
         </li><br>
         <li>
           <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter">.filter()</a>
-        </li>
+        </li><br>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/some">.some()</a>
+        method tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.</li><br>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every">.every()</a>
+        </li><br>
+
       </ul>
   </div>
   <div id="links">
