add array iterators js and html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/unshift"> dot unshift </a></li>    
   </ul>
   <div>
-    <a href="/iterators.html">array iterators</a>
+    <a href="/iterators.html">array iterators</a><br>
+    <a href="/array-iterators-lab.html">array iterators lab</a>
   </div>
   
 </body>
