solve first two lab q

--- a/array-iterators-lab.html
+++ b/array-iterators-lab.html
@@ -11,6 +11,13 @@
 </head>
 <body>
   <h1>array iterators lab</h1>
-  <h2></h2>
+  <h2>for problems 1 - 6 refer to the inventors object in yours js</h2>
+  <ol class="array-iterators-lab">
+    <li>Filter the array of inventors into a new array containing only the inventors born in the 1500's.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+    <li>Map the array of the inventors into a new array containing objects with just the first and last names as properties.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>Sort the inventors by birthdate, oldest to youngest.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+    <li>Sort the inventors by birthdate, from those born furthest in the past to those born most recently.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+    <li>Sort the inventors by years lived from shortest to longest-lived.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+    <li>Find how many years all the inventors lived combined.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+  </ol>
 </body>
 </html>
