--- a/more-iterators.html
+++ b/more-iterators.html
@@ -14,6 +14,9 @@
     <h4>more Hot Iterator Methods</h4>
       <ul>
         <li>
+          <a id="find" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/sort">.sort() </a>
+        </li><br>        
+        <li>
           <a id="find" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find">.find() </a>
         </li><br>
         <li>
