html for problem 6

--- a/array-iterators-lab.html
+++ b/array-iterators-lab.html
@@ -10,14 +10,26 @@
   <title>array-iterators-lab</title>
 </head>
 <body>
-  <h1>array iterators lab</h1>
-  <h2>for problems 1 - 6 refer to the inventors object in yours js</h2>
-  <ol class="array-iterators-lab">
-    <li>Filter the array of inventors into a new array containing only the inventors born in the 1500's.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
-    <li>Map the array of the inventors into a new array containing objects with just the first and last names as properties.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>Sort the inventors by birthdate, oldest to youngest.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
-    <li>Sort the inventors by birthdate, from those born furthest in the past to those born most recently.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
-    <li>Sort the inventors by years lived from shortest to longest-lived.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
-    <li>Find how many years all the inventors lived combined.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
-  </ol>
+  <div>
+    <h1>array iterators lab</h1>
+    <h2>for problems 1 - 5 refer to the inventors object in yours js</h2>
+    <ol class="array-iterators-lab">
+      <li>Filter the array of inventors into a new array containing only the inventors born in the 1500's.<br><input type ="checkbox" checked><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Map the array of the inventors into a new array containing objects with just the first and last names as properties.<br><input type ="checkbox" checked><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Sort the inventors by birthdate, from those born furthest in the past to those born most recently.<br><input type ="checkbox" checked><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Sort the inventors by years lived from shortest to longest-lived.<br><input type ="checkbox" checked><label for="answer" checked>Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Find how many years all the inventors lived combined.<br><input type ="checkbox" checked><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+    </ol>
+  </div>
+  <div>
+    <h2>number 6 will refer to the people array</h2>
+    <ol start="6">
+      <li>Map the people array such that the new array consists of strings with the names formatted as "First Last", e.g., "Becker, Carl" should be mapped to "Carl Becker".</li>
+    </ol>
+    <ul>
+      <li> ol start="6"> is how we started a new list at 6. </li><br>
+      <li> any other fun things we can do with this array? </li>
+    </ul>
+  </div>
 </body>
 </html>
