at method html and js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </ul>
   <div>
     <a href="/iterators.html">array iterators</a><br>
+    <a href="/at-method.html">the at method </a><br>
     <a href="/array-iterators-lab.html">array iterators lab</a>
   </div>
   
