--- a/array-iterators-lab.html
+++ b/array-iterators-lab.html
@@ -31,5 +31,8 @@
       <li> any other fun things we can do with this array? </li>
     </ul>
   </div>
+  <div id="links">
+    <a href="/index.html">index</a>
+  </div>
 </body>
 </html>
