--- a/at-method.html
+++ b/at-method.html
@@ -20,11 +20,9 @@
       <h4 id="at-index">at(index)</h4>
       <h4>instead of array[array.length - 1]:</h4>
       <h4 id="at-index">array.at(-1)</h4>
-
-    
-
-
-      
+    </div>
+    <div id="links">
+      <a href="/index.html">index</a>
     </div>
 </body>
 </html>
