--- a/iterators.html
+++ b/iterators.html
@@ -49,8 +49,9 @@
     </div>
     <h4>console.log(`The total charge for dining is $ ${totalSpendingOnDining}`)</h4>
   </div>
-  <div>
-    <a href="/more-iterators.html">more array iterators</a>
+  <div id="links">
+    <a href="/more-iterators.html">more iterators</a><br>
+    <a href="/index.html">index</a>
   </div>
 </body>
 </html>
