--- a/more-iterators.html
+++ b/more-iterators.html
@@ -35,7 +35,7 @@
       </ul>
   </div>
   <div id="links">
-    <a href="/index.html">back to arrays</a>
+    <a href="/index.html">index</a>
   </div>
 </body>
 </html>
