--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/shift"> dot shift </a></li>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/unshift"> dot unshift </a></li>    
   </ul>
-  <div>
+  <div id="links">
     <a href="/iterators.html">array iterators</a><br>
+    <a href="/more-iterators.html">more iterators</a><br>
     <a href="/at-method.html">the at method </a><br>
     <a href="/array-iterators-lab.html">array iterators lab</a>
   </div>
