create albums array and table

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="/more-iterators.html">more iterators</a><br>
     <a href="/at-method.html">the at method </a><br>
     <a href="/array-iterators-lab.html">array iterators lab</a>
+    <a href="/albums-array.html">albums-array</a>
   </div>
   
 </body>
