add off-brand headings to table

--- a/albums-array.html
+++ b/albums-array.html
@@ -9,9 +9,26 @@
 </head>
 <body>
   <div id="albums-table">
-    <h2>An Array of Albums as a Table of Albums</h2>
-    
+    <h2>an array called albums as a Table of Albums</h2>
+    <table>
+      <tr>
+        <th>_ _ _albums.album_ _ _ _</th>
+        <th>_ _ _ .artist_ _ _ _ _ _ _</th>
+        <th>.year_ _ </th>
+        <th>.genre_ _ _</th>
+        <th>.format</th>
+      </tr>
+    </table>    
     <div id="box"></div>
   </div>
+  <div id="instructions">
+    <h2>Given the above table, solve for the following in your js file</h2>
+    <h4>Print your answers to read "The answer to number __ is __"</h4>
+    <ol id="problems">
+
+    </ol>
+
+  </div>
+
 </body>
 </html>
