--- a/albums-array.html
+++ b/albums-array.html
@@ -24,8 +24,14 @@
   <div id="instructions">
     <h2>Given the above table, solve for the following in your js file</h2>
     <h4>Print your answers to read "The answer to number __ is __"</h4>
-    <ol id="problems">
-
+    <ol class="albums-array-problems">
+      <li>Filter the array of albums into a new array containing only the albums released in the 1970's<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Map the array of the albums into a new array containing objects with just the album name and artist as properties.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Sort the albums by release data, from past to present.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Sort the albums alphabetically by genre.<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Find how many albums are celebrating an type of 5th or 10th anniversary in 2022(i.e. 5th, 10th, 15th, 20th, etc.) <br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Map the array such that the new array consists of strings formatted as "'Album' by Arist", e.g. "'Let It Be'" by The Beatles<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Branching off of number 6, format self-titled albums as "Artist - s/t"<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
     </ol>
 
   </div>
