add practice problems to albums array html

--- a/albums-array.html
+++ b/albums-array.html
@@ -32,9 +32,15 @@
       <li><a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find">find </a> how many albums are celebrating an type of 5th or 10th anniversary in 2022(i.e. 5th, 10th, 15th, 20th, etc.) <br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
       <li><a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">map</a> the array such that the new array consists of strings formatted as "'Album' by Arist", e.g. "'Let It Be'" by The Beatles<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
       <li>Branching off of number 6, format self-titled albums as "Artist - s/t"<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Count the number of ep's. Hint: <a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce">reduce</a><br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Count the number of Beatles albums<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li>Check if at least one album (<a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/some">some</a>) has been released in the last two years<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li><a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find">Find </a>the soundtrack <br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
+      <li><a id="dot-map" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find">Find the index of </a>the ambient album<br><input type ="checkbox"><label for="answer">Answer?</label><input type="checkbox"><label>with a forLoop?</label></li>
     </ol>
 
   </div>
 
 </body>
 </html>
+
